[gd_scene load_steps=3 format=3 uid="uid://bijq7mf8h0j85"]

[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/misc/main_theme.tres" id="1_j5lpm"]
[ext_resource type="Script" path="res://scences/ui/settings/tooltip.gd" id="2_y0pru"]

[node name="Tooltip" type="PanelContainer"]
process_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 55.0
offset_bottom = 36.0
grow_horizontal = 2
mouse_filter = 1
theme = ExtResource("1_j5lpm")
script = ExtResource("2_y0pru")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TooltipText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "Tooltip description
Tooltip description"
fit_content = true

[node name="HideTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="mouse_exited" from="." to="." method="hide_tooltip"]
